<?xml version="1.0"?>
<package>
  <name>doro_exekutor</name>
  <version>0.0.1</version>
  <description>The doro_exekutor package. All the exekutors for doro are here.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chitt@live.in">Chittaranjan Srinivas Swaminathan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>acquire_exekutor</build_depend>
  <build_depend>action_exekutor</build_depend>
  <build_depend>handle_exekutor</build_depend>
  <build_depend>look_exekutor</build_depend>
  <build_depend>move_hand_exekutor</build_depend>
  <build_depend>moveit_hand_exekutor</build_depend>
  <build_depend>pick_up_exekutor</build_depend>
  <build_depend>dock_exekutor</build_depend>
  <build_depend>cam_interface</build_depend>
  <build_depend>tuples_linker</build_depend>
  <build_depend>move_to_exekutor</build_depend>
  <build_depend>fake_exekutor</build_depend>

  <run_depend>handle_exekutor</run_depend>
  <run_depend>move_to_exekutor</run_depend>
  <run_depend>tuples_linker</run_depend>
  <run_depend>cam_interface</run_depend>
  <run_depend>dock_exekutor</run_depend>
  <run_depend>acquire_exekutor</run_depend>
  <run_depend>action_exekutor</run_depend>
  <run_depend>look_exekutor</run_depend>
  <run_depend>move_hand_exekutor</run_depend>
  <run_depend>moveit_hand_exekutor</run_depend>
  <run_depend>pick_up_exekutor</run_depend>
  <run_depend>fake_exekutor</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
